Ensure overflow is hidden on HTML as well as BODY

--- a/styles/sass/respond/_states.scss
+++ b/styles/sass/respond/_states.scss
@@ -91,13 +91,7 @@
 }
 
 @mixin navscroll {
-	.spine-mobile #spine {
-		#scroll {
-			overflow-y: scroll;
-			-webkit-overflow-scrolling: touch; // Add momentum based scrolling to the scroll area.
-		}
-	}
-
+	.spine-mobile-open,
 	.spine-mobile-open body {
 		overflow: hidden;
 	}
